# sf-cmake

./: .gitignore  README.md  SfBaseConfig.cmake  SfBuildCheckConfig.cmake  SfCatch2Config.cmake  SfCatch2ConfigVersion.cmake  SfCompilerConfig.cmake  SfDoxyGenConfig.cmake  SfDoxygenConfig.cmake  SfGoogleTestConfig.cmake  SfGoogleTestConfigVersion.cmake  SfJsonConfig.cmake  SfJsonConfigVersion.cmake  SfMacrosConfig.cmake  SfQtLibraryCommon.cmake  SfQtLibraryConfig.cmake  SfQtLibraryConfigVersion.cmake  SfToolChainConfig.cmake  SingleInstanceConfig.cmake  run-executable.cmake
doc/: build.md  documentation.md  semantic-versioning.md
gitlab-ci/: build.gitlab-ci.yml
tool/: git-client.py  py-pass.cpp
tpl/cpack/: CPackConfig-ARCHIVE.cmake  CPackConfig-DEBIAN.cmake  CPackConfig-NSIS.cmake  CPackConfig.cmake
tpl/doxygen/: custom.css  doxyfile.conf
tpl/gitlab-ci/: README.md  build-single.gitlab-ci.yml  test.gitlab-ci.yml
tpl/res/: version.rc
tpl/root/: CMakeLists.cmake  CMakeLists.tpl.cmake  CMakeLists.txt  CMakePresets.json  CMakePresets.md  CMakeUserPresets.json  README.md  build.ini  check-format.sh  default.clang-format  default.gitignore  docker-build.sh  git-pre-commit-hook.sh  user.cmake
tpl/root/doc/: CMakeLists.txt  ci-pipeline.puml  mainpage.md
tpl/root/gitlab-ci/: build-single.gitlab-ci.yml  build-steps.gitlab-ci.yml  coverage.gitlab-ci.yml  main.gitlab-ci.yml  test.gitlab-ci.yml
tpl/root/src/: CMakeLists.txt
tpl/root/src/cli/: CMakeLists.txt  main.cpp
tpl/root/src/hwl/: CMakeLists.txt
tpl/root/src/hwl/inc/hwl/: global.h  hello.h
tpl/root/src/hwl/src/: hello.cpp
tpl/root/src/hwl/tests/catch/: main.cpp
tpl/root/src/hwl/tests/google/: main.cpp
tpl/root/src/qt/: CMakeLists.txt  main.cpp
tpl/root/src/tests/catch/: CMakeLists.txt  main.cpp  test-json.cpp  test-strings.cpp
tpl/root/src/tests/google/: CMakeLists.txt  main.cpp  test-hello.cpp
